--- a/.classpath
+++ b/.classpath
@@ -29,6 +29,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/zhuang-workflow"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/zhuang-workflow.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
