--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/css/workflow.css=UTF-8
 encoding//src/main/webapp/modules/workflow/apply_form_submit.jsp=UTF-8
 encoding//src/main/webapp/modules/workflow/apply_form_toolbar.jsp=UTF-8
