--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,12 @@
   	<servlet-class>com.zhuang.web.workflow.WorkflowDeploymentServlet</servlet-class>
   </servlet>
   <servlet>
+  	<servlet-name>WebApiServlet</servlet-name>
+  	<display-name>WebApiServlet</display-name>
+  	<description></description>
+  	<servlet-class>com.zhuang.web.webapi.WebApiServlet</servlet-class>
+  </servlet>
+  <servlet>
   	<servlet-name>WorkflowQueryServlet</servlet-name>
   	<display-name>WorkflowQueryServlet</display-name>
   	<description></description>
@@ -43,5 +49,10 @@
   <servlet-mapping>
   	<servlet-name>WorkflowQueryServlet</servlet-name>
   	<url-pattern>/wf/query</url-pattern>
+  </servlet-mapping>
+  
+    <servlet-mapping>
+  	<servlet-name>WebApiServlet</servlet-name>
+  	<url-pattern>/webapi</url-pattern>
   </servlet-mapping>
 </web-app>
