--- a/.classpath
+++ b/.classpath
@@ -30,5 +30,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/zhuang-workflow-0.0.1.jar" sourcepath="/zhuang-workflow"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/zhuang-data-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/zhuang-upms"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
