--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,56 +3,73 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-  	<servlet-name>FileUploadTestServlet</servlet-name>
-  	<display-name>FileUploadTestServlet</display-name>
-  	<description></description>
-  	<servlet-class>com.zhuang.web.test.FileUploadTestServlet</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>WorkflowEngineServlet</servlet-name>
-  	<display-name>WorkflowEngineServlet</display-name>
-  	<description></description>
-  	<servlet-class>com.zhuang.web.workflow.WorkflowEngineServlet</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>WorkflowDeploymentServlet</servlet-name>
-  	<display-name>WorkflowDeploymentServlet</display-name>
-  	<description></description>
-  	<servlet-class>com.zhuang.web.workflow.WorkflowDeploymentServlet</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>RestApiServlet</servlet-name>
-  	<display-name>RestApiServlet</display-name>
-  	<description></description>
-  	<servlet-class>com.zhuang.web.restapi.RestApiServlet</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>WorkflowQueryServlet</servlet-name>
-  	<display-name>WorkflowQueryServlet</display-name>
-  	<description></description>
-  	<servlet-class>com.zhuang.web.workflow.WorkflowQueryServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>FileUploadTestServlet</servlet-name>
-  	<url-pattern>/FileUploadTestServlet</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>WorkflowEngineServlet</servlet-name>
-  	<url-pattern>/wf/engine</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>WorkflowDeploymentServlet</servlet-name>
-  	<url-pattern>/wf/deploy</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>WorkflowQueryServlet</servlet-name>
-  	<url-pattern>/wf/query</url-pattern>
-  </servlet-mapping>
-  
-    <servlet-mapping>
-  	<servlet-name>RestApiServlet</servlet-name>
-  	<url-pattern>/restapi</url-pattern>
-  </servlet-mapping>
+	<display-name>Archetype Created Web Application</display-name>
+	<servlet>
+		<servlet-name>FileUploadTestServlet</servlet-name>
+		<display-name>FileUploadTestServlet</display-name>
+		<description></description>
+		<servlet-class>com.zhuang.web.test.FileUploadTestServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>WorkflowEngineServlet</servlet-name>
+		<display-name>WorkflowEngineServlet</display-name>
+		<description></description>
+		<servlet-class>com.zhuang.web.workflow.WorkflowEngineServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>WorkflowDeploymentServlet</servlet-name>
+		<display-name>WorkflowDeploymentServlet</display-name>
+		<description></description>
+		<servlet-class>com.zhuang.web.workflow.WorkflowDeploymentServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>RestApiServlet</servlet-name>
+		<display-name>RestApiServlet</display-name>
+		<description></description>
+		<servlet-class>com.zhuang.web.restapi.RestApiServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>WorkflowQueryServlet</servlet-name>
+		<display-name>WorkflowQueryServlet</display-name>
+		<description></description>
+		<servlet-class>com.zhuang.web.workflow.WorkflowQueryServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>UpmsServlet</servlet-name>
+		<display-name>UpmsServlet</display-name>
+		<description></description>
+		<servlet-class>com.zhuang.web.upms.RestApiServlet</servlet-class>
+	</servlet>
+
+
+
+
+
+	<servlet-mapping>
+		<servlet-name>FileUploadTestServlet</servlet-name>
+		<url-pattern>/FileUploadTestServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>WorkflowEngineServlet</servlet-name>
+		<url-pattern>/wf/engine</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>WorkflowDeploymentServlet</servlet-name>
+		<url-pattern>/wf/deploy</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>WorkflowQueryServlet</servlet-name>
+		<url-pattern>/wf/query</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>RestApiServlet</servlet-name>
+		<url-pattern>/restapi</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>UpmsServlet</servlet-name>
+		<url-pattern>/upmsapi</url-pattern>
+	</servlet-mapping>
+
 </web-app>
