--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/resources/log4j.properties=UTF-8
 encoding//src/main/webapp/modules/workflow/apply_form_submit.jsp=UTF-8
 encoding//src/main/webapp/modules/workflow/apply_form_toolbar.jsp=UTF-8
 encoding//src/main/webapp/modules/workflow/css/apply_form.css=UTF-8
